userdashboard has been fixed

--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirectTwelthDataTable.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirectTwelthDataTable.css
@@ -8,6 +8,8 @@
     height: 40px;
     font-size: var(--nd-space-300);
 }
-.bTQagf{
 
+.sc-dVBluf.iIjLKU.rdt_TableHeadRow {
+    background: #ef6236 !important;
+    color: var(--nd-white);
 }
