--- a/src/AdminPannel/Project_login/pro_assests/ProjectLeftnav.css
+++ b/src/AdminPannel/Project_login/pro_assests/ProjectLeftnav.css
@@ -151,7 +151,7 @@ body {
 } */
 .project-dp {
   font-size: var(--nd-space-500);
-  background-color: #ef6236;
+  background-color: #152036;
 
   border-radius: 50%;
   color: var(--nd-white);
