change password button

--- a/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
@@ -3,7 +3,23 @@
 }
 .pro-edit-btn{
     margin: var(--nd-space-500);
+    background-color:var(--nd-blue-dark);
+    font-size: var(--nd-space-300);
+    border: 1px #253452 solid;
+
 }
 .pro-cancel-btn{
     margin: var(--nd-space-500);
+    background-color: var( --nd-gray);
+    font-size: var(--nd-space-300);
+    border: 1px #808080 solid;
+  
+}
+button.pro-edit-btn.btn.btn-primary:hover{
+background-color:#253452 !important;
+border: 1px #253452 solid;
+}
+button.pro-cancel-btn.btn.btn-primary:hover{
+background-color: var(--nd-gray) !important;
+border: 1px #808080 solid; 
 }
