project dashboard UI update

--- a/src/assets/css/DashBoardIndex.css
+++ b/src/assets/css/DashBoardIndex.css
@@ -33,6 +33,9 @@
     align-items: center;
     margin-top: 61px;
 }
+.project-nanda-title{
+    padding-top: 8px;
+}
 
 @media (max-width: 575.98px) { 
     
