--- a/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
+++ b/src/AdminPannel/Directorate_login/direc_assets/css/DirectorateDashboard.css
@@ -185,6 +185,18 @@
     padding: var(--nd-space-50);
 }
 
+.project-div{
+    width: 96%;
+    margin: 0 auto;
+}
+
+.project-card-box{
+    border-radius: 10px;
+        padding-top: 12px;
+        border: 1px solid var(--nd-border);
+        box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
+    }
+    
 @media (max-width: 568px) {
     .direc-icon img {
         display: none;
