project 12th table with css

--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -8,9 +8,9 @@
     font-size: var(--nd-space-250);
 }
 
-.pro-thead,
+.pro-thead
 th {
-    background-color: #1b2a47 !important;
+    background-color: #1b2a47 !important; 
 }
 
 .pro-paging .active>.page-link,
@@ -69,18 +69,10 @@ button.view-btn.btn.btn-primary{
   
  
   .merged-column {
-    background-color: #f8f9fa;
     text-align: center;
     font-weight: bold;
   }
-  
 
-  .recommendation-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 5px;
-  }
   .pr-p{
     padding: 0px;
   }
