UI Update all portal

--- a/src/AdminPannel/Project_login/pro_assests/ProjectLeftnav.css
+++ b/src/AdminPannel/Project_login/pro_assests/ProjectLeftnav.css
@@ -639,7 +639,7 @@ span.nav-project-label {
   }
 
   .project-log-icon-mob {
-    background-color: var(--nd-blue-hover);
+    background-color: #152036;
     width: 30px;
     height: 30px;
     border-radius: 50%;
