--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -8,9 +8,8 @@
     font-size: var(--nd-space-250);
 }
 
-.pro-thead
-th {
-    background-color: #1b2a47 !important; 
+.pro-thead th {
+    background-color: #1b2a47 !important;
 }
 
 .pro-paging .active>.page-link,
@@ -41,41 +40,105 @@ th {
 
 .view-btn {
     padding-left: 6px 6px 6px 6px;
-    border:none;
+    border: none;
     background-color: transparent;
     border-radius: 8px;
     color: black;
     font-size: var(--nd-space-300);
 }
-.view-btn:hover{
+
+.view-btn:hover {
     background-color: transparent;
     color: black;
 }
-button.view-btn.btn.btn-primary{
+
+button.view-btn.btn.btn-primary {
     background-color: transparent !important;
     color: var(--nd-black);
 }
-.pro-span-btn{
+
+.pro-span-btn {
     padding-right: 42px;
 }
-.pro-t-d-report{
+
+.pro-t-d-report {
     padding: var(--nd-space-0) !important;
 }
 
 .table-container {
     overflow-x: auto;
     white-space: nowrap;
-  }
-  
- 
-  .merged-column {
+}
+
+
+.merged-column {
     text-align: center;
     font-weight: bold;
-  }
+}
 
-  .pr-p{
+.pr-p {
     padding: 0px;
-  }
-  
+}
 
-  
+.m-or-left {
+    margin-left: 278px;
+    font-size: var(--nd-space-300);
+    margin-bottom: 10px;
+}
+
+.pro-offline-text h2 {
+    font-size: var(--nd-space-250);
+}
+
+.pro-offline-text {
+    line-height: var(--nd-space-300);
+}
+
+.pro-offline-text p {
+    color: #1b2a47 !important;
+    font-size: var(--nd-space-300);
+    font-weight: bold;
+   
+}
+.pro-offline-text h3{
+    font-size: var(--nd-space-400);
+    color: var(--nd-blue);
+}
+.offline-btn {
+    background-color: #1b2a47;
+    color: var(--nd-white);
+    font-size: var(--nd-space-300);
+    border: none !important;
+}
+
+button.offline-btn.btn.btn-primary {
+    background-color: #1b2a47;
+}
+
+button.offline-btn.btn.btn-primary {
+    background-color: #1b2a47 !important;
+}
+.pro-report-view{
+    font-size:var(--nd-space-400);
+    background-color: #1b2a47;
+    border-radius: 8px;
+    color: var(--nd-white);
+    
+}
+
+.nd-data-report {
+    font-weight: inherit;
+    background-color: #1b2a47;
+    margin-left: var(--nd-space-100);
+    font-size: 10px;
+    border-radius: 13px;
+    padding: 4px;
+    margin-right: var(--nd-space-400);
+}
+.nd-btn-project {
+    border-radius: 16px !important;
+    font-size: 10px;
+    padding: 0px;
+    font-weight: 500 !important;
+    color: #1b2a47;
+}
