table issues has been fixed

--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -123,6 +123,7 @@ button.offline-btn.btn.btn-primary {
     background-color: #1b2a47;
     border-radius: 8px;
     color: var(--nd-white);
+    margin-left: 4px;
     
 }
 
@@ -141,4 +142,25 @@ button.offline-btn.btn.btn-primary {
     padding: 0px;
     font-weight: 500 !important;
     color: #1b2a47;
+}
+.nd-feedback-submit{
+    border-radius: 16px !important;
+    font-size: 10px;
+    padding: 0px;
+    font-weight: 500 !important;
+    color: #1b2a47;
+}
+span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
+    color: rgb(0, 126, 0);
+    font-weight: bold;
+}
+.pro-feed-view{
+    font-size:var(--nd-space-400);
+    background-color: rgb(0, 126, 0);
+    border-radius: 8px;
+    color: var(--nd-white);
+    margin-left: 4px;
+}
+td.feedback-td{
+    width: 20px !important;
 }
