icons issues fixed in tables

--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -69,6 +69,9 @@ button.view-btn.btn.btn-primary {
     overflow-x: auto;
     white-space: nowrap;
 }
+.table-container-data{
+    overflow-x: auto;
+}
 
 
 .merged-column {
@@ -120,9 +123,9 @@ button.offline-btn.btn.btn-primary {
 }
 .pro-report-view{
     font-size:var(--nd-space-400);
-    background-color: #1b2a47;
-    border-radius: 8px;
-    color: var(--nd-white);
+    
+    border-radius: 4px;
+    color: #1b2a47;
     margin-left: 4px;
     
 }
@@ -161,6 +164,12 @@ span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
     color: var(--nd-white);
     margin-left: 4px;
 }
-td.feedback-td{
-    width: 20px !important;
+.feedback-td {
+    width: 389px;
+}
+.t-td{
+    width: 120px;
+}
+.pr-feed-data{
+    width: 389px; 
 }
