table structures data has been changed

--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -137,7 +137,7 @@ button.offline-btn.btn.btn-primary {
     font-size: 10px;
     border-radius: 13px;
     padding: 4px;
-    margin-right: var(--nd-space-400);
+    margin-right: var(--nd-space-100);
 }
 .nd-btn-project {
     border-radius: 16px !important;
@@ -155,13 +155,12 @@ button.offline-btn.btn.btn-primary {
 }
 span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
     color: rgb(0, 126, 0);
-    font-weight: bold;
+    font-weight: 600 !important;
 }
 .pro-feed-view{
     font-size:var(--nd-space-400);
-    background-color: rgb(0, 126, 0);
     border-radius: 8px;
-    color: var(--nd-white);
+    color: #097609f5;
     margin-left: 4px;
 }
 .feedback-td {
@@ -172,4 +171,7 @@ span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
 }
 .pr-feed-data{
     width: 389px; 
+}
+.v-form{
+    font-size: var(--nd-space-300);
 }
