--- a/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
@@ -1,25 +1,29 @@
-.project-btn{
-   text-align: center;
+.project-btn {
+    text-align: center;
 }
-.pro-edit-btn{
+
+.pro-edit-btn {
     margin: var(--nd-space-500);
-    background-color:var(--nd-blue-dark);
+    background-color: var(--nd-blue-dark);
     font-size: var(--nd-space-300);
     border: 1px #253452 solid;
 
 }
-.pro-cancel-btn{
+
+.pro-cancel-btn {
     margin: var(--nd-space-500);
-    background-color: var( --nd-gray);
+    background-color: #5f5f5f;
     font-size: var(--nd-space-300);
-    border: 1px #808080 solid;
-  
+    border: 1px #5f5f5f solid;
+
 }
-button.pro-edit-btn.btn.btn-primary:hover{
-background-color:#253452 !important;
-border: 1px #253452 solid;
+
+button.pro-edit-btn.btn.btn-primary:hover {
+    background-color: #253452 !important;
+    border: 1px #253452 solid;
 }
-button.pro-cancel-btn.btn.btn-primary:hover{
-background-color: var(--nd-gray) !important;
-border: 1px #808080 solid; 
+
+button.pro-cancel-btn.btn.btn-primary:hover {
+    background-color: var(--nd-gray) !important;
+    border: 1px #5f5f5f solid;
 }
