Project Design has been completed ower side

--- a/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ResetSectorPassword.css
@@ -1,13 +1,17 @@
 .reset-btn {
-    padding-left: 6px;
-    padding-right: 6px;
-    background-color: var(--nd-blue);
+    padding: 4px 8px 4px 8px;
+    font-weight: 500;
+    background-color: var(--nd-orange);
     color: white;
-    border: 1px var(--nd-blue) solid !important;
+    border: 1px var(--nd-orange) solid !important;
     border-radius: 8px;
     font-size: var(--nd-space-250);
+  
 }
-
+button.reset-btn.btn.btn-primary:hover{
+     background-color: var(--nd-orange);
+      border: 1px var(--nd-orange) solid !important;
+}
 .pro-thead th {
     background-color: #1b2a47 !important;
 }
@@ -76,7 +80,7 @@ button.view-btn.btn.btn-primary {
 
 .merged-column {
     text-align: center;
-    font-weight: bold;
+    
 }
 
 .pr-p {
@@ -143,24 +147,31 @@ button.offline-btn.btn.btn-primary {
     border-radius: 16px !important;
     font-size: 10px;
     padding: 0px;
-    font-weight: 500 !important;
     color: #1b2a47;
 }
 .nd-feedback-submit{
     border-radius: 16px !important;
     font-size: 10px;
     padding: 0px;
-    font-weight: 500 !important;
     color: #1b2a47;
 }
 span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
-    color: rgb(0, 126, 0);
-    font-weight: 600 !important;
+    background-color: rgb(190 73 154);
+    color: #fff;
+    padding: 4px 8px 4px 8px;
+    border-radius: 8px !important;
+    font-weight: 500;
+}
+span.badge.rounded-pill.d-inline-block.nd-feedback-complete{
+    background-color: #008000;;
+    color: #fff;
+    padding: 4px 8px 4px 8px;
+    border-radius: 8px !important;
 }
 .pro-feed-view{
     font-size:var(--nd-space-400);
     border-radius: 8px;
-    color: #097609f5;
+    color:var(--nd-white);
     margin-left: 4px;
 }
 .feedback-td {
@@ -174,4 +185,7 @@ span.badge.rounded-pill.d-inline-block.nd-feedback-submit{
 }
 .v-form{
     font-size: var(--nd-space-400);
+}
+tfoot, th, thead, tr{
+    font-weight: 500;
 }
