--- a/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
+++ b/src/AdminPannel/Project_login/pro_assests/ChangePassword.css
@@ -27,3 +27,16 @@ button.pro-cancel-btn.btn.btn-primary:hover {
     background-color: var(--nd-gray) !important;
     border: 1px #5f5f5f solid;
 }
+
+@media (max-width: 575.98px) {
+
+    .pro-edit-btn {
+        width: 100%;
+        margin: 0px;
+    }
+
+    .pro-cancel-btn {
+        width: 100%;
+        margin: 12px 0px 0px 0px;
+    }
+}
