--- a/src/AdminPannel/District_login/dis_assets/CSS/DistrictLeftNav.css
+++ b/src/AdminPannel/District_login/dis_assets/CSS/DistrictLeftNav.css
@@ -31,7 +31,7 @@ body {
   background-color: #084fa0 !important;
 }
 
-.project-header {
+.district-header {
   height: 70px;
   width: 100vw;
   padding: 0 30px 0px 16px;
@@ -139,7 +139,7 @@ body {
   top: 8px;
 }
 
-/* .project-dp {
+/* .district-dp {
   height: 40px;
   width: 40px;
   background-color: #626262;
@@ -149,7 +149,7 @@ body {
   justify-content: center;
   overflow: hidden;
 } */
-.project-dp {
+.district-dp {
   font-size: var(--nd-space-500);
   background-color: #152036;
 
@@ -169,7 +169,7 @@ body {
 }
 
 
-.project-dpicn {
+.district-dpicn {
   height: 42px;
 }
 
@@ -203,7 +203,7 @@ body {
   box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
 }
 
-.nav-project {
+.nav-district {
   min-height: 100vh;
   width: 250px;
   background-color: #1b2a47;
@@ -220,12 +220,12 @@ body {
   padding: 0px 0 20px 0px;
 }
 
-.nav-projectcontainer,
+.nav-districtcontainer,
 .main {
   min-height: 100vh;
 }
 
-.nav-projectcontainer {
+.nav-districtcontainer {
   height: calc(100vh - 70px);
   width: 250px;
   position: relative;
@@ -234,7 +234,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-.nav-projectcontainer::-webkit-scrollbar {
+.nav-districtcontainer::-webkit-scrollbar {
   display: none;
 }
 
@@ -242,11 +242,11 @@ body {
   background-color: var(--nd-blue-hover);
 }
 
-.nav-projectclose {
+.nav-districtclose {
   width: 72px;
 }
 
-.nav-project-option {
+.nav-district-option {
   width: 250px;
   height: 60px;
 
@@ -260,11 +260,11 @@ body {
   background-color: #248afd;
   min-height: auto;
 } */
-.project-suboption {
+.district-suboption {
   background-color: #152036 !important;
 }
 
-.project-suboption:hover {
+.district-suboption:hover {
   border-left: 5px solid var(--nd-white);
   color: #fff;
   background-color: #253452 !important;
@@ -284,21 +284,21 @@ body {
   margin-top: 8px;
 }
 
-.nav-project-arrow {
+.nav-district-arrow {
   padding-right: 18px;
 }
-.nav-subitem-project{
+.nav-subitem-district{
   padding-left: 54px;
   padding-top: 8px;
   
 }
-.nav-subitem-project:hover{
+.nav-subitem-district:hover{
   background-color: #150804;
 }
-.nav-project-subitem {
+.nav-district-subitem {
   padding-top: 8px;
 }
-.nav-project-subitem:hover {
+.nav-district-subitem:hover {
   border-left: 5px solid var(--nd-white);
   color: #fff;
   background: #23272b linear-gradient(180deg, #44474b, #23272b) repeat-x;
@@ -306,7 +306,7 @@ body {
   cursor: pointer;
 }
 
-.nav-project-option:hover {
+.nav-district-option:hover {
   border-left: 5px solid var(--nd-white);
   color: #fff;
   background: #23272b linear-gradient(180deg, #44474b, #23272b) repeat-x;
@@ -314,18 +314,18 @@ body {
   cursor: pointer;
 }
 
-.nav-project-img {
+.nav-district-img {
   height: 30px;
 }
 
-.nav-project-upper-options {
+.nav-district-upper-options {
   display: flex;
   flex-direction: column;
   gap: 0px;
 
 }
 
-.project-options .option1 {
+.district-options .option1 {
   border-left: 5px solid var(--nd-primary);
   background: #152036;
   border-color: #343a40;
@@ -334,7 +334,7 @@ body {
   margin-top: 7%;
 }
 
-.nav-upper-options .project-options:hover {
+.nav-upper-options .district-options:hover {
   border-left: 5px solid var(--nd-white);
   background-color: #ab492a;
 }
@@ -348,7 +348,7 @@ body {
   background-color: #ab492a;
 }
 
-.project-option:hover {
+.district-option:hover {
   border-left: 5px solid var(--nd-white);
   background-color: #253452;
   cursor: pointer;
@@ -416,7 +416,7 @@ body {
   padding: 0px 20px 20px 20px;
 }
 
-.report-.project-header {
+.report-.district-header {
   height: 80px;
   width: 100%;
   display: flex;
@@ -485,27 +485,27 @@ body {
   border-radius: 4px;
 }
 
-.nav-project h3 {
+.nav-district h3 {
   font-size: var(--nd-space-300) !important;
 }
 
-.nav-project-upper-options a {
+.nav-district-upper-options a {
   color: white;
   text-decoration: none;
 }
 
-.nav-project-icon {
+.nav-district-icon {
   padding: 16px;
   font-size: 24px;
   padding-top: 0px !important;
   color: var(--nd-white);
 }
 
-.nav-project-item {
+.nav-district-item {
   margin-left: -3px;
 }
 
-span.nav-project-label {
+span.nav-district-label {
   padding-top: var(--nd-space-200);
   font-size: var(--nd-space-350);
   color: var(--nd-white);
@@ -538,7 +538,7 @@ span.nav-project-label {
       display: show;
     }
 
-    .accordion-.project-header {
+    .accordion-.district-header {
       border-radius: 8px;
     }
 
@@ -573,17 +573,17 @@ span.nav-project-label {
 @media screen and (max-width: 950px) {
 
 
-  .nav-project-img {
+  .nav-district-img {
     height: 25px;
   }
 
 
 
-  .nav-project-option {
+  .nav-district-option {
     gap: 30px;
   }
 
-  .nav-project-option h3 {
+  .nav-district-option h3 {
     font-size: 15px;
   }
 
@@ -627,18 +627,18 @@ span.nav-project-label {
     display: none;
   }
 
-  .project-log-icon-mob {
+  .district-log-icon-mob {
     background-color: rgb(232, 225, 20);
   }
 
 }
 
 @media screen and (max-width: 850px) {
-  .nav-project-img {
+  .nav-district-img {
     height: 30px;
   }
 
-  .project-log-icon-mob {
+  .district-log-icon-mob {
     background-color: #152036;
     width: 30px;
     height: 30px;
@@ -656,12 +656,12 @@ span.nav-project-label {
     margin-top: 1% !important;
   }
 
-  .nav-project-option {
+  .nav-district-option {
     gap: 30px;
     width: 100%;
   }
 
-  .nav-project-option h3 {
+  .nav-district-option h3 {
     font-size: 20px;
   }
 
@@ -671,7 +671,7 @@ span.nav-project-label {
     width: 700px;
   }
 
-  .nav-projectcontainer {
+  .nav-districtcontainer {
     width: 100vw;
     position: absolute;
     transition: all 0.6s ease-in-out;
@@ -679,13 +679,13 @@ span.nav-project-label {
     left: -100vw;
   }
 
-  .nav-project {
+  .nav-district {
     width: 100%;
     position: absolute;
     z-index: 999;
   }
 
-  .nav-projectclose {
+  .nav-districtclose {
     left: 00px;
   }
 
@@ -751,7 +751,7 @@ span.nav-project-label {
 }
 
 @media screen and (max-width: 768px) {
-  .project-log-icon-mob {
+  .district-log-icon-mob {
     background-color: #152036;
     width: 30px;
     height: 30px;
@@ -772,7 +772,7 @@ span.nav-project-label {
     display: show;
   }
 
-  .accordion-.project-header {
+  .accordion-.district-header {
     border-radius: 8px;
   }
 
@@ -828,7 +828,7 @@ span.nav-project-label {
 
 @media screen and (max-width: 490px) {
 
-  .project-log-icon-mob {
+  .district-log-icon-mob {
     background-color:#152036;
     width: 30px;
     height: 30px;
@@ -841,7 +841,7 @@ span.nav-project-label {
     min-width: 389px !important;
   }
 
-  span.nav-project-label {
+  span.nav-district-label {
     font-size: var(--nd-space-400);
   }
 
@@ -875,7 +875,7 @@ span.nav-project-label {
 
 
 
-  .project-header {
+  .district-header {
     padding: 0 12px !important;
   }
 
@@ -893,16 +893,16 @@ span.nav-project-label {
     height: 25px;
   }
 
-  .nav-project-img {
+  .nav-district-img {
     height: 25px;
   }
 
-  .nav-project-option {
+  .nav-district-option {
     gap: 25px;
     width: 100%;
   }
 
-  .nav-project-option h3 {
+  .nav-district-option h3 {
     font-size: 12px;
   }
 
@@ -918,7 +918,7 @@ span.nav-project-label {
   }
 }
 
-/* a.nav-project-option.option1::before {
+/* a.nav-district-option.option1::before {
   content: "\f04b";
   
 } */
@@ -935,7 +935,7 @@ span.nav-project-label {
     height: 27px;
   }
 
-  .report-.project-header {
+  .report-.district-header {
     height: 60px;
     padding: 10px 10px 5px 10px;
   }
@@ -956,7 +956,7 @@ span.nav-project-label {
     height: 27px;
   }
 
-  .report-.project-header {
+  .report-.district-header {
     height: 60px;
     padding: 10px 5px 5px 5px;
   }
